2018-02-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Show entity's button after header when content type is message and
	child entity is not text nor multipart.

	* mime-view.el (mime-view-entity-title): prefer filename to
	Subject field.
	(mime-display-entity): If situation parameter `button-position' is
	`after', display button after header.
	(mime-display-message): Display child entitiy's button after
	header when needed.
	(mime-display-message/rfc822): New function.  Used for
	message/rfc822 and message/news entity.

2018-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Support for multipart/multilingual entity (RFC 8255).

	* mime-edit.el (mime-edit-decode-single-part-in-buffer): Keep
	Content-Language and Content-Translation-Type fields.

	* mime-view.el (mime-view-insert-entity-button): Show language
	information in button if Content-Language: header is available.
	(mime-display-multipart/multilingual-prefered-languages)
	(mime-display-multipart/multilingual-unknown-translation-type)
	(mime-display-multipart/multilingual-translation-type-score)
	(mime-display-multipart/multilingual-interactive): New varaibles.
	(mime-display-multipart/multilingual-select-interactively)
	(mime-display-multipart/multilingual-select-automatically)
	(mime-display-multipart/multilingual): New functions.

2018-02-11  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-view.el (mime-display-multipart/related): Use
	mime-view-multipart-descendant-button for multipart children when
	mime-view-multipart/related-show-all-children is non-nil.

2018-02-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Workaround for Apple Mail, which may attach attachment as part of
	multipart/alternative entity.  It is hard to find the attachment
	for MIME-View mode user.  When
	mime-view-multipart/alternative-show-all-children is non-nil, such
	hidden attachment's button would appear.

	* mime-view.el
	(mime-view-multipart/alternative-show-all-children): New variable.
	(mime-view-multipart-descendant-button): New function.